gcc/testsuite/rust/rustc/ui/pub/pub-ident-fn-or-struct.rs
pub S (foo) bar
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

